===============================================================================
* v0.8
===============================================================================
- Farm and barrack can be built by peon
- Grunt can be train from barrack
- Font rendering with a formatted string
===============================================================================

===============================================================================
* v0.7
===============================================================================
- World: new methods GetUnitAt() and NearestUnitOf()
- GatheringOrder: move back and forth between mine and townhall
- Animation rendering is splitted: Unit has Render() method and calls renderer
- States like "move/holdingGold" are Unit attributes
- Rename EOrder to ECommand
- New class "WorkerUnit" (inherit from Unit)
- Basic pathfinding implementation (with Breadth First Search)
- New BuildTile coordinates (uses in map rendering, and building stuff)
- New WalkTile coordinates (mainly uses in pathfinding)
- Units are responsible of how they handle a RightClick event (when selected)
- Unit pops at a suitable location once trained or when construction is ended
- Lots of code maintenance
- Path computation is cached in PathCache
===============================================================================

===============================================================================
* v0.6
===============================================================================
- Townhall can be build from peon
- Order which need a destination is handled
- Render building for building placement
- Units takes time to be trained (according to their unit description)
- Render different building state according to construction ETA
- Building in construction or unit being trained can be canceled
- Render progress bar for unit training and building construction
- Screen scrolling with keyboard or mouse
- FPS counter in window's title