@@ -4,6 +4,9 @@
 - Farm and barrack can be built by peon
 - Grunt can be train from barrack
 - Font rendering with a formatted string
+- Player owns a gold amount
+- Peon bringing gold to townhall makes the player gain gold
+- Building or training unit cost gold (which is restored in case of cancellation)
 ===============================================================================
 
 ===============================================================================
